# B-OOP-400-NAN-4-1-arcade-alexandre.franquet-mirror

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
.github/workflows/: verif_mirror.yml
core/: Arcade.cpp  Arcade.hpp  Core.cpp  Core.hpp  ErrorManagement.hpp  LibLoader.hpp
core/src/Display/: ADisplay.hpp  IDisplay.hpp
core/src/Game/: AGame.hpp  IGame.hpp
core/src/Input/: AEvent.hpp  IEvent.hpp
core/src/Lib/: ALib.hpp  ILib.hpp  Types.hpp
core/src/Object/: AObjects.hpp  IObject.hpp
core/src/Text/: Text.hpp
doc/: MAINPAGE.md
doc/html/: AGame_8hpp_source.html  ALib_8hpp_source.html  AObjects_8hpp_source.html  Core_8hpp_source.html  ErrorManagement_8hpp_source.html  IGame_8hpp_source.html  ILib_8hpp_source.html  IObject_8hpp_source.html  LibLoader_8hpp_source.html  Text_8hpp_source.html  Types_8hpp_source.html  annotated.html  classArcade_1_1AGame-members.html  classArcade_1_1AGame.html  classArcade_1_1ALib-members.html  classArcade_1_1ALib.html  classArcade_1_1AObject-members.html  classArcade_1_1AObject.html  classArcade_1_1Core-members.html  classArcade_1_1Core.html  classArcade_1_1IGame-members.html  classArcade_1_1IGame.html  classArcade_1_1ILib-members.html  classArcade_1_1ILib.html  classArcade_1_1IObject-members.html  classArcade_1_1IObject.html  classArcade_1_1LibLoader-members.html  classArcade_1_1LibLoader.html  classArcade_1_1LoaderException-members.html  classArcade_1_1LoaderException.html  classArcade_1_1Text-members.html  classArcade_1_1Text.html  classes.html  dir_4270bfced15e0e73154b13468c7c9ad9.html  dir_4fe1c58e217faa9c00077a38a45c9d23.html  dir_691916e02752f77705df3f5f946f6a33.html  dir_7774f8016b9d7bf837e81a5ed64f8597.html  dir_90fd98a0ba30abf7a6068a44995d2d6b.html  dir_b43f6e47fd9b3eeefa6ed01ce9ae5994.html  files.html  (+6 more)
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  pages_0.js  searchdata.js
doc/latex/: AGame_8hpp_source.tex  ALib_8hpp_source.tex  AObjects_8hpp_source.tex  Core_8hpp_source.tex  ErrorManagement_8hpp_source.tex  IGame_8hpp_source.tex  ILib_8hpp_source.tex  IObject_8hpp_source.tex  LibLoader_8hpp_source.tex  Text_8hpp_source.tex  Types_8hpp_source.tex  annotated.tex  classArcade_1_1AGame.eps  classArcade_1_1AGame.tex  classArcade_1_1ALib.eps  classArcade_1_1ALib.tex  classArcade_1_1AObject.eps  classArcade_1_1AObject.tex  classArcade_1_1Core.tex  classArcade_1_1IGame.eps  classArcade_1_1IGame.tex  classArcade_1_1ILib.eps  classArcade_1_1ILib.tex  classArcade_1_1IObject.eps  classArcade_1_1IObject.tex  classArcade_1_1LibLoader.tex  classArcade_1_1LoaderException.eps  classArcade_1_1LoaderException.tex  classArcade_1_1Text.tex  files.tex  hierarchy.tex  index.tex  refman.aux  refman.idx  refman.out  refman.tex  refman.toc
lib/: CMakeLists.txt  font_data.h
lib/game/: CMakeLists.txt  nibbler.hpp  snake.hpp
lib/game/nibbler/: CMakeLists.txt  nibbler.cpp  nibbler.hpp
lib/game/snake/: CMakeLists.txt  snake.cpp  snake.hpp
lib/graphics/: CMakeLists.txt  ncurses.hpp  sdl2.hpp  sfml.cpp  sfml.hpp
lib/graphics/SDL2/: CMakeLists.txt  sdl2.cpp  sdl2.hpp
lib/graphics/SFML/: CMakeLists.txt  sfml.cpp
lib/graphics/ncurses/: CMakeLists.txt  ncurses.cpp  ncurses.hpp
tests/: tests.cpp
tests/debug_lib/: CMakeLists.txt  Debug.cpp  Debug.hpp
